--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "css-column-rule-style",
+  "style": "column-rule-style.css",
   "version": "0.0.5",
   "homepage": "http://github.com/mrmrs/css-column-rule-style",
   "description": "Css module of single purpose classes for column rule style",
